--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "cart-service",
+  "name": "auth-service",
   "version": "1.0.0",
-  "description": "Servicio de carrito de compras",
+  "description": "Authentication microservice with JWT",
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js"
   },
+  "keywords": ["auth", "jwt", "microservice"],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "aws-sdk": "^2.1400.0",
-    "dotenv": "^16.0.3",
     "cors": "^2.8.5",
-    "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
+    "aws-sdk": "^2.1691.0",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "uuid": "^9.0.1"
   },
