--- a/catalog-service/package.json
+++ b/catalog-service/package.json
@@ -11,7 +11,9 @@
     "express": "^4.18.2",
     "aws-sdk": "^2.1400.0",
     "dotenv": "^16.0.3",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
