--- a/order-service/package.json
+++ b/order-service/package.json
@@ -12,7 +12,8 @@
     "aws-sdk": "^2.1400.0",
     "dotenv": "^16.0.3",
     "cors": "^2.8.5",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
